# Cinema_API

./: README.md  celerybeat-schedule.bak  db.sqlite3  pyproject.toml  pytest.ini  request.http
cinema/: .env  celery.py  settings.py  urls.py
movies/: api.py  models.py  schemas.py  tasks.py  test_api.py
movies/migrations/: 0001_initial.py  0002_movie_slug.py  0003_alter_movie_trailer.py
